fix: text overflow

--- a/blocks/Element/__text/element__text.css
+++ b/blocks/Element/__text/element__text.css
@@ -5,6 +5,6 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  max-width: 200px;
+  max-width: 195px;
   font-weight: 900;
 }
