--- a/blocks/profile/__header/profile__header.css
+++ b/blocks/profile/__header/profile__header.css
@@ -6,6 +6,10 @@
   align-self: center;
   font-weight: 500;
   text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 294px;
 }
 
   @media (min-width: 320px) and (max-width: 1023px){
