--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -5,6 +5,10 @@
   grid-column: 1;
   text-align: center;
   font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 336px;
 }
 
 @media (min-width: 320px) and (max-width: 1023px){
